--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,426 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap");
+body {
   margin: 0;
+  padding: 0;
+  background-color: #f3f6f4;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.css-c9i4pt-MuiButtonBase-root-MuiButton-root {
+  font-family: "Quicksand", sans-serif;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* Header Images*/
+
+.navbar {
+  position: sticky;
+  top: 0;
+  z-index: 1000; /* Optional: this ensures the navbar stays on top of all other elements */
 }
 
-a {
-  color: inherit;
+.header-image {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+
+.header-image-1 {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+
+/* Product Info */
+
+.product-info-container {
+  display: flex;
+  padding: 0 5rem;
+}
+
+.mockup-image {
+  width: 100%;
+  height: auto;
+}
+
+.product-info-container > div {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5rem;
+}
+
+.product-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.product-info > h2 {
+  font-family: "Quicksand", sans-serif;
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  font-weight: 500;
+}
+
+.product-info > p {
+  font-family: "Quicksand", sans-serif;
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+  text-align: justify;
+  line-height: 1.5;
+  font-weight: 300;
+}
+
+/* Product Pricing */
+
+.products-pricing-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 1240px;
+  column-gap: 2rem;
+  margin: 2rem auto;
+}
+
+.products-pricing-container > div {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pricing-title {
+  font-family: "Quicksand", sans-serif;
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  font-weight: 500;
+}
+
+/* Card */
+
+.card {
+  width: 381px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card > h2 {
+  font-family: "Quicksand", sans-serif;
+  font-size: 32px;
+  font-weight: 700;
+  margin-top: 0;
+}
+
+.card-img > img {
+  width: 100px;
+}
+
+.product-price {
+  margin: 0;
+  font-family: "Quicksand", sans-serif;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.buy-button-container {
+  display: flex;
+  justify-content: center;
+  margin: 0.5rem 0;
+}
+
+.buy-button {
+  border: 0;
+  border-radius: 999px;
+  background: #113946;
+  color: #fff;
+  text-transform: unset;
+  letter-spacing: unset;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  padding: 10px 34px;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.includes-info {
+  font-family: "Quicksand", sans-serif;
+  font-weight: 300;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 28px 0 0;
+  border-top: 1px solid rgba(137, 164, 199, 0.5);
+  text-align: left;
+  color: #1a2737;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  margin: 30px 0 0;
+}
+
+.includes-info > p {
+  font-size: 16px;
+}
+
+.includes-list {
+  padding-left: 10px;
+  list-style-type: none;
+}
+
+.includes-list > li {
+  margin-bottom: 10px;
+}
+
+.example-button {
+  font-family: "Quicksand", sans-serif;
+  border-radius: 999px;
+  border-color: #113946;
+  background-color: #113946;
+  color: #fff;
+  text-transform: unset;
+  letter-spacing: unset;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 24px;
+  padding: 10px 34px;
+  text-decoration: none;
+  margin-top: 1rem;
+}
+
+.example-button:hover {
+  background-color: #fff;
+  color: #113946;
+  border-color: #113946;
+}
+
+/* How it Works */
+
+.hiw-container {
+  padding: 3rem;
+  font-family: "Quicksand", sans-serif;
+}
+
+.hiw-title {
+  font-family: "Quicksand", sans-serif;
+  font-size: 2rem;
+  margin: 3rem 0;
+  text-align: center;
+}
+
+.steps-container {
+  display: flex;
+  justify-content: center;
+  max-width: 1240px;
+  column-gap: 2rem;
+  margin: 2rem auto;
+}
+
+.s-step-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  max-width: 300px;
+}
+.step-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.step-description {
+  font-size: 1rem;
+  margin: 1rem 0;
+}
+
+.step-img > img {
+  width: 150px;
+}
+
+/* Testimonials */
+
+.testimonials-title {
+  font-family: "Quicksand", sans-serif;
+  font-size: 2rem;
+  margin-bottom: 3rem;
+  text-align: center;
+}
+
+.testimonials-container {
+  font-family: "Quicksand", sans-serif;
+  display: flex;
+  justify-content: center;
+  max-width: 1240px;
+  column-gap: 2rem;
+  margin: 2rem auto;
+}
+
+.testimony-container {
+  width: 381px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 3rem;
+}
+
+.testimony-body {
+  font-family: "Quicksand", sans-serif;
+  font-size: 1.2rem;
+  text-align: justify;
+  line-height: 1.5;
+  display: flex;
+  flex-direction: row;
+}
+
+.testimony-text {
+  margin: 0 1rem;
+}
+
+.t-user-info {
+  border-top: 1px solid rgba(45, 45, 45, 0.5);
+  padding-top: 1rem;
+}
+
+.testimony-author {
+  margin-bottom: 0.9rem;
+}
+
+/* FAQ */
+
+.faq-title {
+  font-family: "Quicksand", sans-serif;
+  font-size: 2rem;
+  margin-bottom: 3rem;
+  text-align: center;
+}
+
+.faq-container {
+  display: flex;
+  font-family: "Quicksand", sans-serif;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+  padding: 0 7rem;
+}
+
+.faq-question {
+  font-weight: 500;
+  color: #515151;
+}
+
+/* Footer */
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  background-color: #bca37f;
+  color: #fff;
+}
+
+.links-container {
+  display: flex;
+  gap: 1.5rem;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.brand-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #000;
+}
+.brand-logo {
+  width: 100px;
+  margin: 1.5rem 0;
+}
+
+/* ---------------------------------------------------------------------------------------------------- */
+
+/* Media Queries */
+
+/* Phones */
+@media (max-width: 1024px) {
+  .header-image-1 {
+    object-position: 0 -00px;
+  }
+
+  .product-info-container {
+    flex-direction: column;
+    padding: 1rem 1rem;
+  }
+
+  .product-info-container > div {
+    padding: 1rem;
+  }
+
+  .product-info > h2 {
+    font-size: 2rem;
+  }
+
+  .mockup-image {
+    margin-top: 2.5rem;
+    width: 80%;
+  }
+
+  .pricing-title {
+    text-align: center;
+  }
+
+  .products-pricing-container {
+    flex-direction: column;
+  }
+
+  .card {
+    width: 80%;
+    margin: 1rem 0;
+  }
+
+  .card > h2 {
+    text-align: center;
+  }
+
+  .card-img {
+    display: flex;
+    justify-content: center;
+  }
+
+  .card-img > img {
+    max-width: 50px;
+  }
+
+  .product-price {
+    text-align: center;
+  }
+
+  .steps-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .testimonials-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .testimony-container {
+    width: 75%;
+  }
+
+  .faq-container {
+    padding: 0 1rem;
   }
 }
